# swc-plugin-glob-import

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: rust.yml
src/: lib.rs
tests/fixture/1/: input.js  output.js
tests/fixture/2/: input.js  output.js
