[package]
authors = ["Reiner Gerecke <me@reinergerecke.de>"]
description = "SWC Plugin for glob imports"
name = "swc-plugin-glob-import"
version = "0.0.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
glob = "0.3.0"
regex = "1.6.0"
swc_core = { version = "0.29.*", features = ["plugin_transform", "testing"] }