[package]
authors = ["Reiner Gerecke <me@reinergerecke.de>"]
description = "SWC Plugin for glob imports"
name = "swc-plugin-glob-import"
version = "0.0.4"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[dependencies]
glob = "0.3.1"
regex = "1.10.2"
swc_core = { version = "0.82.*", features = ["ecma_plugin_transform"] }
testing = "0.35.0"
